added CNAME file

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 </head>
 <body>
    <nav class="navbar navbar-expand-lg navbar-light fixed-top">
-      <a class="navbar-brand" href="/">Doomon.in</a>
+      <a class="navbar-brand" href="/"> Doomon.in </a>
       <button class="navbar-toggler collapsed position-relative" type="button" data-toggle="collapse"
          data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
          aria-label="Toggle navigation">
@@ -48,23 +48,22 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
          <ul class="navbar-nav mr-auto">
             <li class="nav-item header">
-               <a class="nav-link dark-th" href="https://covid19tracker.doomon.in"> blog </a>
+               <a class="nav-link dark-th" href="https://covid19tracker.doomon.in"> Covid19 Tracker </a>
             </li>
             <li class="nav-item header">
-               <a class="nav-link dark-th" href="https://cvs..doomon.in"> my work </a>
+               <a class="nav-link dark-th" href="https://cvs.doomon.in"> Chamba Valley School </a>
             </li>
          </ul>
       </div>
       </div>
    </nav>
-   <div class="main-container">
       <div class="container-fluid">
-         <div class="row no-gutters">
-            <h3>Welcome to Doomon Inc</h3>
+         <div class="jumbotron">
+            <img src="assets/logo.png"  alt="logo.png"></img>
+            <h2>Welcome to Doomon Inc</h2> 
             <p class="lead">where all your dreams come true.</p>
         </div>
     </div>
-   </div>
    <footer class="footer mt-auto p-3">
       <span class="text-muted">© 2019-20 Doomon inc.</span>
    </footer>
@@ -79,8 +78,6 @@
    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"
       integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ"
       crossorigin="anonymous"></script>
-   <script data-ad-client="ca-pub-1533259080190708" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-   <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5e6a0f6a419ca078"></script>
 </body>
 
 </html>
