--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
          <div class="jumbotron">
             <img src="assets/logo.png"  alt="logo.png"></img>
             <h2>Welcome to Doomon Inc</h2> 
-            <p class="lead">where all your dreams come true.</p>
+            <p class="lead"></p>
         </div>
     </div>
    <footer class="footer mt-auto p-3">
