--- a/index.html
+++ b/index.html
@@ -2,6 +2,19 @@
 <html lang="en">
 
 <head>
+
+ <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+   <title>Home - doomon.in</title>
+   <meta name="viewport" content="width=device-width, initial-scale=1">
+   <meta name="viewport" content="width=device-width, initial-scale=1">
+   <meta name="keywords" content="doomon">
+   <meta name="description" content="Home - doomon.in">
+   <meta property="og:url" content="http://www.doomon.in">
+   <meta property="og:type" content="website">
+   <meta property="og:title" content="doomon">
+   <meta property="og:description" content="Home - doomon.in">
+   <meta property="og:image" content="/assets/logo.png">
+   
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
