--- a/index.html
+++ b/index.html
@@ -4,27 +4,22 @@
 <head>
 
  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-   <title>Home - doomon.in</title>
+   <title>Doomon</title>
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <meta name="keywords" content="doomon">
-   <meta name="description" content="Home - doomon.in">
+   <meta name="description" content="Doomon">
    <meta property="og:url" content="http://www.doomon.in">
    <meta property="og:type" content="website">
    <meta property="og:title" content="doomon">
-   <meta property="og:description" content="Home - doomon.in">
+   <meta property="og:description" content="Doomon">
    <meta property="og:image" content="/assets/logo.png">
    
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Doomon</title>
-  <meta content="" name="descriptison">
-  <meta content="" name="keywords">
-
-
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
+  <link href="assets/img/logo.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
@@ -73,7 +68,7 @@
       <div class="row justify-content-center" data-aos="fade-up" data-aos-delay="150">
         <div class="col-xl-6 col-lg-8">
           <h1>Doomon<span>.</span></h1>
-          <h2>Team of talented developers</h2>
+          <h2></h2>
         </div>
       </div>
 
@@ -100,12 +95,6 @@
           <div class="icon-box">
             <i class="ri-paint-brush-line"></i>
             <h3><a href="">Java Interview</a></h3>
-          </div>
-        </div>
-        <div class="col-xl-2 col-md-4 col-6 mt-4 mt-xl-0">
-          <div class="icon-box">
-            <i class="ri-database-2-line"></i>
-            <h3><a href="">Doomon</a></h3>
           </div>
         </div>
       </div>
