--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <div class="col-xl-2 col-md-4 col-6 mt-4 mt-xl-0">
           <div class="icon-box">
             <i class="ri-paint-brush-line"></i>
-            <h3><a href="">Java Interview</a></h3>
+            <h3><a href="https://javaprep.doomon.in">Java Interview</a></h3>
           </div>
         </div>
       </div>
