--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="100">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-world"></i></div>
-              <h4><a href="">Java Interview</a></h4>
+              <h4><a href="https://javaprep.doomon.in">Java Interview</a></h4>
               <p>Application for Java based interview questions.</p>
             </div>
           </div>
