--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <div class="col-xl-2 col-md-4 col-6">
           <div class="icon-box">
             <i class="ri-store-line"></i>
-            <h3><a href="https://covid19tracker.doomon.in">Covid-19 Tracker</a></h3>
+            <h3><a href="http://www.covid19tracker.doomon.in/">Covid-19 Tracker</a></h3>
           </div>
         </div>
         <div class="col-xl-2 col-md-4 col-6 ">
@@ -118,7 +118,7 @@
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
             <div class="icon-box">
               <div class="icon"><i class="bx bxl-dribbble"></i></div>
-              <h4><a href="https://covid19tracker.doomon.in">Covid-19 Tracker</a></h4>
+              <h4><a href="http://www.covid19tracker.doomon.in/">Covid-19 Tracker</a></h4>
               <p>Coronavirus tracker application shows number of positive cases as of now.</p>
             </div>
           </div>
